<resources>
    <string name="app_name">Base Project</string>
    <string name="add_contact">Add Contact</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>

    <string name="eatOut">Ăn tiệm</string>
    <string name="haveBreakfast">Ăn sáng</string>
    <string name="lunch">Ăn trưa</string>
    <string name="dinner">Ăn tối</string>
    <string name="snacks">Ăn vặt</string>
    <string name="cafe">Cafe</string>
    <string name="drink">Nhậu</string>
    <string name="title_start">Giấc ngủ tuyệt vời</string>

    <string name="saving_image_fail_msg">Couldn\'t save the image</string>

    <string name="just_now">Just now</string>
    <string name="contacts">Contacts</string>
    <string name="things">things</string>
    <string name="the_app">The App</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="chosen_thing">Chosen Thing:</string>
    <string name="error">erro</string>
    <string name="ok">ok</string>
    <string name="msg_cancel">cancel</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="pls_instal_health_connect">Hãy cài đặt Health Connect trước</string>
    <string name="permistion_succesful">Đã cấp quyền thành công</string>
    <string name="permistion_aded">đã có quyền</string>

    <string name="start_screen">Màn hình khởi động</string>
    <string name="change_icon_app">Đổi icon ứng dụng</string>
    <string name="dark_mode">Chế độ nền tối</string>
    <string name="overview">Tổng quan</string>



    <plurals name="seconds_ago">
        <item quantity="one">%1$d second ago</item>
        <item quantity="other">%1$d seconds ago</item>
    </plurals>

    <plurals name="minutes_ago">
        <item quantity="one">%1$d minute ago</item>
        <item quantity="other">%1$d minutes ago</item>
    </plurals>

    <plurals name="hours_ago">
        <item quantity="one">%1$d hour ago</item>
        <item quantity="other">%1$d hours ago</item>
    </plurals>

    <plurals name="days_ago">
        <item quantity="one">%1$d day ago</item>
        <item quantity="other">%1$d days ago</item>
    </plurals>

    <plurals name="months_ago">
        <item quantity="one">%1$d month ago</item>
        <item quantity="other">%1$d months ago</item>
    </plurals>

    <plurals name="years_ago">
        <item quantity="one">%1$d year ago</item>
        <item quantity="other">%1$d years ago</item>
    </plurals>

</resources>
