<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_padding"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.linhpham.baseproject.ui.custom.ItemSettingDisplay
            android:id="@+id/isdStartScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:display_setting_text="@string/overview"
            app:display_title="@string/start_screen" />

        <com.linhpham.baseproject.ui.custom.ItemSettingDisplay
            android:id="@+id/isdDarkMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:display_setting_text="Off"
            app:display_title="@string/dark_mode" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>